# django_product

./: manage.py  pyproject.toml
atividade_django_2605/: asgi.py  settings.py  urls.py  wsgi.py
product/: apps.py  urls.py  views.py
product/templates/: formCategories.html  formProducts.html  home.html  listCategories.html  listProducts.html
