[tool.poetry]
name = "atividade_django_2605"
version = "0.1.0"
description = "atividade para frisar os conhecimentos passados no tech start"
authors = ["Helena Kopp <helena.kopp@olist.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.3"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
